--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div id="usamap"></div>
 
 <script src="js/jquery-2.1.4.js"></script>
-<script src="ammap/ammap.js" type="text/javascript"></script>
-<script src="ammap/maps/js/usaLow.js" type="text/javascript"></script>
+<script src="js/ammap.js" type="text/javascript"></script>
+<script src="js/usaLow.js" type="text/javascript"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZ0z3qV-feFX3U3b-yChGn3KuDvZDaOWY&callback=initMap" async defer></script>
 <script src="js/main.js"></script>
 </body>
