--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href= "css/normalize.css" />
-  <!--<link rel="stylesheet" type="text/css" hreft="ammap/ammap.css" media="all" />-->
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
 <body>
-  <div id="tnmap"></div>
+  <div id = "container">
+    <h1>Travel Trail</h1>
+    <div id="usamap"></div>
 
-  <div id="usamap"></div>
-
+    <div id="tnmap"></div>
+  </div>
 <script src="js/jquery-2.1.4.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZ0z3qV-feFX3U3b-yChGn3KuDvZDaOWY&callback=initMap" async defer></script>
 <script src="js/ammap.js" type="text/javascript"></script>
 <script src="js/usaLow.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZ0z3qV-feFX3U3b-yChGn3KuDvZDaOWY&callback=initMap" async defer></script>
 <script src="js/main.js"></script>
 </body>
 </html>
