Final Commit Again

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </div>
 
   <div id = "container">  
-    <div id = "directions">
+    <div id= "directions">
       <p>
-        Select a <span>green</span> state below.  Google maps will zoom in to show the places we've visited.  
+        Select a <span id = "green">green</span> state below.  Google maps will zoom in to show the places we've visited.  
         </br>
         States that are grey have not been visited...yet.
       </p>
-      <button id="return"> Show both Maps again </button>
+      <button id="return"> Show both maps again </button>
     </div>
 
     <div id="usamap"></div>
